--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-jsx": "^2.2.9",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +56,7 @@
     "express": "^4.21.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
