--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
+    "@types/next": "^8.0.7",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-jsx": "^2.2.9",
     "class-variance-authority": "^0.7.1",
@@ -57,6 +58,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "multer": "^1.4.5-lts.1",
+    "next": "^15.2.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -70,6 +72,7 @@
     "styled-jsx": "^5.1.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
@@ -89,7 +92,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "tsx": "^4.19.3",
-    "typescript": "^5.5.3",
+    "typescript": "^5.8.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
